# garbage-route-finder

./: CMakeLists.txt  README.md  benchmarks.ipynb  benchmarks_lviv.ipynb  lviv_config.json  lviv_input.json  lviv_results.csv  plots.ipynb  visualiser.ipynb
benchmarks/: c100_t3_r3.json  c100_t4_r1.json  c100_t4_r2.json  c20_t1_r1.json  c20_t1_r2.json  c300_t5_r1.json  c300_t6_r3.json  c300_t6_r5.json  c50_t2_r1.json  c50_t2_r2.json  c5_t1_r1.json
cmake/: FindLibOSRM.cmake
data/Groningen/: Containers_Glas.csv  Containers_Huisvuil.csv  Containers_Papier.csv  Containers_Textiel.csv  input.json  parser.ipynb
data/Lviv/: containers_map.kml  input.json
data/NewYork/: input.json  parser.ipynb
data/Pittsburgh/: input.json  parser.ipynb  pitsburg.csv
data/SantBoiDeLlobregat/: input.json  parser.ipynb  sant_boi.csv
img/: best_10.html  best_15.html  best_20.html  ga_10.html  ga_15.html  ga_20.html  groningen.html  groningen_containers.html  new_york.html  new_york_containers.html  pittsburg.html  pittsburg_containers.html  sa_10.html  sa_15.html  sa_20.html  sant_boi_de_llobregat.html  sant_boi_de_llobregat_containers.html  tabu_10.html  tabu_15.html  tabu_20.html
src/: main.cpp
src/Actions/: Action.h  EmptyAction.cpp  EmptyAction.h  FixedOrderSelector.cpp  FixedOrderSelector.h  Heuristic.cpp  Heuristic.h  InterChangeAction.cpp  InterChangeAction.h  MoveAction.cpp  MoveAction.h  MoveInExportation.cpp  MoveInExportation.h  MultipleSelector.cpp  MultipleSelector.h  ProbabilisticSelector.cpp  ProbabilisticSelector.h  RemoveLoops.cpp  RemoveLoops.h  ReverseAction.cpp  (+9 more)
(+56 files in other folders)
